--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/casualprogram/tin-news-bot/issues"
   },
-  "homepage": "https://github.com/casualprogram/tin-news-bot#readme"
+  "homepage": "https://github.com/casualprogram/tin-news-bot#readme",
+  "dependencies": {
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
+    "form-data": "^4.0.2",
+    "path": "^0.12.7",
+    "puppeteer": "^24.2.1"
+  }
 }
