--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "this bot will help member got up to date with news regarding sneakers and fashion",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,7 +20,12 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.4.7",
+    "figlet": "^1.8.0",
     "form-data": "^4.0.2",
+    "gradient-string": "^3.0.0",
+    "inquirer": "^12.4.2",
+    "nanospinner": "^1.2.2",
     "path": "^0.12.7",
     "puppeteer": "^24.2.1"
   }
