--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/casualprogram/tin-news-bot#readme",
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^1.8.1",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "figlet": "^1.8.0",
@@ -28,5 +28,8 @@
     "nanospinner": "^1.2.2",
     "path": "^0.12.7",
     "puppeteer": "^24.2.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
