--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest --watchAll --verbose"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watchAll --verbose"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "puppeteer": "^24.2.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0"
   }
 }
