--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "inquirer": "^12.4.2",
     "nanospinner": "^1.2.2",
     "path": "^0.12.7",
-    "puppeteer": "^24.2.1"
+    "puppeteer": "^24.2.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
