--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/casualprogram/tin-news-bot#readme",
   "dependencies": {
     "axios": "^1.7.9",
+    "axios-cookiejar-support": "^6.0.2",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.7",
     "figlet": "^1.8.0",
@@ -29,7 +30,8 @@
     "nanospinner": "^1.2.2",
     "path": "^0.12.7",
     "puppeteer": "^24.2.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "user-agents": "^1.1.526"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
