--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "nanospinner": "^1.2.2",
     "path": "^0.12.7",
     "puppeteer": "^24.2.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "request": "^2.88.2",
     "user-agents": "^1.1.526"
   },
